<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_tex"
    tools:context="com.gofly.transfers.fragment.TransfersSearchFragment">
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfers"
        android:background="@color/colorPrimary"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16"
        android:padding="@dimen/padding_10"
        />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        app:cardCornerRadius="@dimen/padding_5"
        android:layout_below="@+id/text">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_location"
                android:textSize="@dimen/text_12"
                android:textColor="@color/black_sixty"
                android:padding="@dimen/padding_5"
                />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_here"
                android:textSize="@dimen/text_14"
                android:textColor="@color/black"
                android:padding="@dimen/padding_5"
                android:drawablePadding="05dp"
                android:drawableTint="@color/colorPrimary"
                android:drawableLeft="@drawable/location_icon"
                android:gravity="center|left"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_20"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:gravity="center"
            android:background="@drawable/blue_butten"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16"
            android:padding="@dimen/padding_10"
            />
    </LinearLayout>

</RelativeLayout>
