<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/all_page_bg"
    android:clickable="true">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_15"
        android:paddingBottom="@dimen/padding_15"
        android:paddingLeft="@dimen/padding_10"
        android:paddingRight="@dimen/padding_10"
        android:background="@color/colorPrimary"

        android:text="@string/guest_room"
        android:fontFamily="@font/bold"
        android:textSize="@dimen/text_18"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/add_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_room"
        android:textColor="@color/blue_text"
        android:layout_alignParentRight="true"
        android:padding="@dimen/padding_10"
        android:layout_below="@+id/title"/>

    <TextView
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10"
        android:layout_margin="@dimen/margin_15"
        android:layout_alignParentBottom="true"
        android:background="@drawable/blue_butten"
        android:text="@string/done"
        android:textColor="@color/white"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:textSize="@dimen/text_18"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/room_guest_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/add_room"
        android:layout_above="@+id/done_button">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>