<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gofly.main.activity.ChangePasswordActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:padding="@dimen/padding_5"
        android:background="@drawable/edittext_background">

        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textPassword"
            android:maxLength="50"
            android:textColor="@color/black"
            android:padding="@dimen/padding_5"
            android:hint="@string/old_password" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:padding="@dimen/padding_5"
        android:background="@drawable/edittext_background">

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textPassword"
            android:maxLength="50"
            android:textColor="@color/black"
            android:padding="@dimen/padding_5"
            android:hint="@string/new_password" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:padding="@dimen/padding_5"
        android:background="@drawable/edittext_background">

        <EditText
            android:id="@+id/re_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textPassword"
            android:maxLength="50"
            android:textColor="@color/black"
            android:padding="@dimen/padding_5"
            android:hint="@string/reenter_new_password" />

    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/bt_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/save_profile"
        android:textSize="@dimen/text_16"
        android:layout_margin="@dimen/margin_10"
        android:background="@drawable/orange_butten"/>
</LinearLayout>
