<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_10"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_10">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/tv_transactionType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Money Paid"
                android:textSize="@dimen/text_16"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="INR 20"
                android:textSize="@dimen/text_16"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_alignParentRight="true"/>

            <TextView
                android:id="@+id/tv_reference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reference_id"
                android:textSize="8dp"
                android:layout_below="@id/tv_transactionType"
          />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_30"
            android:layout_marginTop="@dimen/margin_10"
            >

            <TextView
                android:id="@+id/tv_dateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:text="@string/date"
                android:layout_above="@+id/tv_status"
                android:textSize="8dp"
                />
            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="8dp"
                android:layout_alignParentBottom="true"
                />

            <TextView
                android:id="@+id/tv_closingBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closing_balance"
                android:textSize="8dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
</LinearLayout>